services/immich-power-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-power-tools
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-power-tools
  template:
    metadata:
      labels:
        app: immich-power-tools
    spec:
      containers:
        - name: immich-power-tools
          image: ghcr.io/immich-power-tools/immich-power-tools:v0.22.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 5m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
