services/immich-power-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-power-tools
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  rules:
    - host: tools.photos.labmatt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-power-tools
                port:
                  number: 3000
  tls:
    - hosts:
        - tools.photos.labmatt.com
      secretName: photos-tools-tls
